--- a/package.json
+++ b/package.json
@@ -9,25 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "expo": "^49.0.13",
     "expo-camera": "~13.4.4",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "^14.5.0",
     "expo-location": "~16.1.0",
     "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.0",
     "json5": "^2.2.3",
     "node-fetch": "^3.3.2",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
     "semver": "^7.5.4",
+    "uuid": "^9.0.1",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
