--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.7",
+    "date-fns": "^2.30.0",
     "expo": "^49.0.13",
     "expo-camera": "~13.4.4",
     "expo-font": "~11.4.0",
