--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "redux-persist": "^6.0.0",
     "semver": "^7.5.4",
     "uuid": "^9.0.1",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "expo-dev-client": "~2.4.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
